No OpenGL/GLX compositing on Gallium softpipe

BUG: 271166
FIXED-IN: 4.7.0